--- a/style.css
+++ b/style.css
@@ -1,35 +1,26 @@
 body {
-  text-align: center;
   font-family: Arial, sans-serif;
-  background-color: #fffbe0;
-  padding: 30px;
+  text-align: center;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2;
+}
+body.bg-active {
+  background-image: url('CHH.jpg');
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: center top;
+  background-attachment: fixed;
+  padding-top: 100px;  
 }
 
 .container {
-  border: 2px solid #ff8c00;
-  padding: 20px;
+  background-color: rgba(152, 102, 102, 0.95);
+  padding: 30px;
   border-radius: 20px;
-  background-color: #fff8dc;
-  max-width: 500px;
-  margin: auto;
-}
-
-input {
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid #aaa;
-}
-
-button {
-  padding: 10px 20px;
-  margin-left: 10px;
-  border-radius: 10px;
-  background-color: orange;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: darkorange;
+  margin: 80px auto;
+  width: 80%;
+  max-width: 400px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
