--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #f2f2f2;
 }
 body.bg-active {
-  background-image: url('CHH.jpg');
+  background-image: url('ch.jpg');
   background-repeat: no-repeat;
   background-size: 60%;
   background-position: center top;
